--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Gmal:shivananddhanagond48@gmail.com</p>
-                    <p><i class="uil uil-phone"></i>Mob: 7619371308</p>
+                    <p><i class="uil uil-envelope"></i> shivananddhanagond48@gmail.com</p>
+                    <p><i class="uil uil-phone"></i>7619371308</p>
                 </div>
              </div>
              <div class="col">
